added some the testing

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ESEWA_SECRET_KEY= "8gBm/:&EnhH.1/q"
+ESEWA_SECRET_KEY= "asdfghjk"
 ESEWA_GATEWAY_URL = "https://rc-epay.esewa.com.np"
 ESEWA_PRODUCT_CODE = "EPAYTEST"
 BACKEND_URI = "http://localhost:8001"
@@ -8,3 +8,11 @@ PORT="8001"
 
 
 
+https://rc-epay.esewa.com.np/api/epay/transaction/status/?product_code=EPAYTEST&total_amount=1000&transaction_uuid=679290cef5a25a774494466a
+
+
+
+ 9800000001
+  9800000001
+
+  n5HspNDFNbr@Xy8
